# ML_ops_DVC

./: .gitignore  dvc.yaml  params.yaml  requirements.txt
.dvc/: config
dvclive/plots/metrics/: f1_score.tsv  precision.tsv  recall.tsv
src/: data_collection.py  data_prep.py  model_building.py  model_eval.py
water-potability/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
water-potability/docs/: mkdocs.yml
water-potability/docs/docs/: index.md
water-potability/reports/: metrics.json
water-potability/water_potability/: data_model.py  dataset.py  features.py  main.py
water-potability/water_potability/modeling/: model_building.py  model_eval.py
